# amazon-timestream-odbc-driver

./: .gitignore  CHANGELOG.md  build_mac_debug64.sh  build_mac_release64.sh  build_win_debug32.ps1  build_win_debug64.ps1  build_win_release32.ps1  build_win_release64.ps1  run_cppcheck.ps1  run_cppcheck.sh
.github/workflows/: linux-build.yml  mac-build.yml  mac-debug-build.yml  remove-old-artifacts.yml  win-build.yml
docs/markdown/setup/: connection-string.md  developer-guide.md  linux-installation-guide.md  ole-db.md  setup.md
docs/markdown/support/: odbc-support-and-limitations.md
performance/: CMakeLists.txt
performance/PTODBCResults/: CMakeLists.txt
scripts/: build_aws-sdk-cpp.ps1  build_driver.ps1  build_linux.sh  build_windows.ps1  register_driver_unix.sh
src/: CMakeLists.txt  vcpkg.json
src/odbc/: CMakeLists.txt
src/odbc/include/timestream/odbc/: connection.h  descriptor.h  statement.h  utility.h
src/odbc/include/timestream/odbc/app/: application_data_buffer.h
src/odbc/src/: connection.cpp  odbc.cpp  statement.cpp  timestream_column.cpp  timestream_cursor.cpp  utility.cpp
src/odbc/src/app/: application_data_buffer.cpp
src/odbc/src/query/: data_query.cpp
src/tests/data-writer/: CMakeLists.txt
src/tests/integration-test/: CMakeLists.txt
src/tests/integration-test/src/: api_robustness_test.cpp  application_data_buffer_test.cpp  attributes_test.cpp  connection_test.cpp  meta_queries_test.cpp  queries_test.cpp
src/tests/unit-test/: CMakeLists.txt
